# nexus-vfs

./: .gitattributes  .gitignore  CODEOWNERS  Cargo.toml  README.md
nexus-fuse/: ARCHITECTURE.md  Cargo.toml  PERFORMANCE_RESULTS.md  README.md
nexus-fuse/benches/: README.md  cache_backends.rs  concurrent_read.rs  fuse_operations.rs  passthrough_read.rs
nexus-fuse/src/: cache.rs  cached_read.rs  client.rs  daemon.rs  error.rs  fs.rs  hydrate.rs  lib.rs  main.rs  metrics.rs
nexus-fuse/src/passthrough/: backing.rs  config.rs  manager.rs  mod.rs  policy.rs
nexus-fuse/tests/: concurrent_stress_test.rs  error_handling_test.rs  integration_test.rs  metrics_test.rs  minimal_http_test.rs  passthrough_integration.rs
rust/a2a/: Cargo.toml
rust/a2a/src/: install.rs  lib.rs  mailbox_stamping_hook.rs  mailbox_stamping_policy.rs
rust/a2a/tests/: test_install_a2a.rs  test_stamp_hook.rs
rust/auth/: Cargo.toml
rust/auth/src/: lib.rs  mint.rs  provider.rs  record.rs  slot_store.rs
rust/backends/: Cargo.toml
rust/backends/src/: lib.rs  provider.rs
rust/backends/src/addressing/: mod.rs
rust/backends/src/storage/: cas_local.rs  federation_peer.rs  local_connector.rs  mod.rs  mount_path.rs  path_local.rs  remote.rs
rust/backends/src/transports/: mod.rs
rust/contracts/: Cargo.toml
rust/contracts/src/: constants.rs  lib.rs  lock_state.rs  operation_context.rs  rust_service.rs
rust/kernel/: Cargo.toml  INTEGRATION.md  README.md  build.rs  test_nexus_fast.py
rust/kernel/benches/: read_batch.rs  readdir_bench.rs  syscall_bench.rs
rust/kernel/src/: abi.rs  lib.rs  llm_streaming.rs  observer_backend.rs
rust/kernel/src/abc/: cache_store.rs  meta_store.rs  mod.rs  object_store.rs
rust/kernel/src/auth/: mod.rs  procfs.rs  wiring.rs
rust/kernel/src/core/: dlc.rs  fdt.rs  file_watch.rs  metadata_sync.rs  mod.rs  permission_cache.rs  plugin_loader.rs  procfs.rs  rpc_transport.rs  service_registry.rs  shm_header.rs  vfs_router.rs
rust/kernel/src/extensions/: llm_streaming.rs  mod.rs  observer_backend.rs
rust/kernel/src/federation/: blob_fetcher_slot.rs  coordinator_wiring.rs  grpc_ops.rs  mod.rs  peer_dispatch.rs  route_outcomes.rs  test_support.rs
rust/kernel/src/hal/: auth_key_store.rs  distributed_coordinator.rs  federation_peer.rs  mod.rs  object_store_provider.rs
rust/kernel/src/kernel/: convenience.rs  dispatch.rs  federation.rs  io.rs  ipc.rs  locks.rs  mod.rs  mount.rs  observability.rs  plugins.rs  syscall.rs  syscall_async.rs  syscall_impl.rs
rust/kernel/tests/: metastore_restart_survival.rs  read_batch_speedup.rs  service_hook_lifecycle.rs
rust/kernel/trusted_keys/: .gitignore  kernel-dogfood-v1.pub  nexus-team.pub  songym-win-dev.pub
rust/lib/: Cargo.toml
rust/lib/src/: bitmap.rs  glob.rs  hash.rs  lib.rs
rust/lib/src/rebac/: config.rs  graph.rs  mod.rs  tests.rs
rust/lib/src/search/: mod.rs
rust/lib/src/transport_primitives/: channel.rs  config.rs  mod.rs  peer.rs  peer_blob_client.rs  pool.rs  server_limits.rs  tofu.rs
rust/lib/src/trigram/: builder.rs  format.rs  mod.rs  query.rs
rust/nexus-vfs/: Cargo.toml
rust/nexus-vfs-cluster/: Cargo.toml  build.rs
rust/nexus-vfs-cluster/src/: lib.rs
rust/nexus-vfs-cluster/src/raft/: blob_fetcher_handler.rs  distributed_coordinator.rs  mod.rs  pyo3_bindings.rs  zone_handle.rs  zone_manager.rs  zone_meta_store.rs
rust/nexus-vfs-cluster/src/transport/: federation.rs  grpc.rs  ipc.rs  mod.rs  peer_blob.rs
rust/nexus-vfs-cluster/tests/: test_async_bootstrap.rs  test_bootstrap_blocks_on_empty_unreachable_peers.rs  test_grpc_cluster.rs  test_zone_manager_under_tokio_main.rs
rust/nexus-vfs-core/: Cargo.toml  build.rs
rust/nexus-vfs-core/benches/: ops_registry_bench.rs  read_batch.rs  write_coalescing.rs
rust/nexus-vfs-core/src/: lib.rs
rust/nexus-vfs-core/src/backends/: mod.rs
rust/nexus-vfs-core/src/contracts/: lock_state.rs  mod.rs  operation_context.rs  rust_service.rs  write_coalescing.rs
rust/nexus-vfs-core/src/kernel/: abi.rs  agent_registry_py.rs  batch_read_py.rs  cas_chunking.rs  cas_engine.rs  cas_remote.rs  cas_transport.rs  generated_kernel_abi_pyo3.rs  mod.rs  python.rs  rpc_transport.rs
rust/nexus-vfs-core/src/services/: mod.rs
rust/nexus-vfs-core/src/util/: bloom.rs
rust/nexus-vfs-core/tests/: read_batch_speedup.rs
rust/nexus-vfs/src/: lib.rs
rust/nexus-vfsd/: Cargo.toml
rust/nexus-vfsd/src/: main.rs
rust/nexusd/: Cargo.toml
rust/nexusd/src/: main.rs
rust/permission/: Cargo.toml
rust/permission/src/: lease_cache.rs  lib.rs  zone_perms.rs
rust/profiles/cluster/: Cargo.toml
rust/profiles/cluster/src/: auth_posture.rs  lib.rs  main.rs
rust/profiles/cluster/tests/: a2a_wakeup.rs  agent_bind_from_stamp.rs  agent_identity_unique.rs  api_key_auth.rs  auth_offline_lock.rs  federation_mtls_from_stamp.rs  federation_survives_joiner_restart.rs  moss_shape.rs  (+2 more)
rust/profiles/collaboration/: Cargo.toml
rust/profiles/full/: Cargo.toml
rust/profiles/vault/: Cargo.toml
rust/raft/: Cargo.toml  README.md  build.rs
rust/raft/examples/: gen_federation_certs.rs
rust/raft/src/: auth_key_store.rs  blob_fetcher.rs  blob_fetcher_handler.rs  bootstrap.rs  distributed_coordinator.rs  identity.rs  lib.rs  pyo3_bindings.rs  runtime_bridge.rs  stream_wakeup.rs  zone_handle.rs  zone_manager.rs  zone_meta_store.rs
rust/raft/tests/: test_async_bootstrap.rs  test_auth_key_replication.rs  test_bootstrap_blocks_on_empty_unreachable_peers.rs  test_discover_zones.rs  test_dt_mount_harvest.rs  test_ec_drain_1v1l.rs  test_ec_snapshot_catchup.rs  test_identity_zone_mirror.rs  test_mtls_federation.rs  test_offline_join_persists_confstate.rs  test_remove_voter.rs  test_root_zone_solo_contract.rs  test_stream_wakeup_replication.rs  test_unified_bringup.rs  test_zone_manager_under_tokio_main.rs
rust/services/: Cargo.toml  build.rs
rust/services/src/: lib.rs
rust/transport/: Cargo.toml
rust/transport/src/: auth.rs  call_dispatch.rs  federation.rs  grpc.rs  grpc_plugin_proxy.rs  ipc.rs  lib.rs  peer_blob.rs  peer_identity.rs
rust/transport/tests/: plugin_grpc_e2e.rs
(+325 files in other folders)
