[workspace]
resolver = "2"
members = [
    # Tier-neutral packages (KERNEL-ARCHITECTURE.md §6):
    #   contracts/ — types / enums / exceptions / constants (zero deps).
    #   lib/       — pure-Rust implementations (algorithms + transport
    #                primitives). Every peer crate depends on it; it
    #                depends only on `contracts`.
    "rust/contracts",
    "rust/lib",
    # OS proper + driver / service tiers (§6.1).
    "rust/transport",
    "rust/kernel",
    "rust/backends",
    "rust/services",
    "rust/raft",
    # Deployment binaries.
    "rust/profiles/cluster",
    # nexusd-vault — single-purpose binary hosting PasswordVaultService
    # over gRPC. Runs alongside (not bundled into) cluster.
    "rust/profiles/vault",
]

[workspace.dependencies]
contracts = { path = "rust/contracts" }
# `lib` is the tier-neutral implementation crate per §6 — algorithms
# (bitmap, bloom, glob, hash, rebac, search, simd, trigram) plus the
# `transport_primitives` module (TLS / pool / addressing / TOFU /
# PeerBlobClient trait). Default build is WASM-clean; `python` and
# `transport` features are opt-in.
lib = { path = "rust/lib" }
transport = { path = "rust/transport" }
services = { path = "rust/services" }
# Driver impls. `default-features = false` so transitive workspace
# consumers (e.g. `nexus-cluster`) can pick a slim driver set without
# fighting Cargo's feature unification.
backends = { path = "rust/backends", default-features = false }
# `kernel` is rlib-only. `default-features = false` keeps the kernel
# runtime defaults (mimalloc allocator, HTTP connector stack) off in
# transitive consumers (backends / services / transport rlibs);
# deployment binaries opt back in explicitly.
kernel = { path = "rust/kernel", default-features = false }
# raft is an rlib used by the cluster binary and other crates.
raft = { path = "rust/raft", default-features = false, features = ["grpc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }
regex = "1.10"
memchr = "2.7"
roaring = "0.11"
globset = "0.4"
blake3 = "1.5"
string-interner = "0.20"
regex-syntax = "0.8"
crc32fast = "1.4"
fastcdc = "4.0"
mimalloc = { version = "0.1", default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

# Cluster binary ships standalone for sudowork; size matters more than
# raw throughput. opt-level="z" picks the cluster code path that
# minimizes object size. On Linux x86_64 with workspace-wide
# strip="symbols", the binary lands around 5-6 MB; on Windows MSVC
# the .exe is closer to 8 MB (PE headers + import tables don't
# compress as much as stripped ELF). CI's size gate (Group F) checks
# the Linux artifact.
[profile.release.package.nexus-cluster]
opt-level = "z"
