[workspace]
resolver = "2"
members = [
    # Tier-neutral packages:
    #   contracts/ — types / enums / exceptions / constants (zero deps).
    #   lib/       — pure-Rust implementations (algorithms + transport
    #                primitives). Every peer crate depends on it; it
    #                depends only on `contracts`.
    "rust/contracts",
    "rust/lib",
    # OS proper + driver tiers.
    "rust/transport",
    "rust/kernel",
    "rust/backends",
    "rust/raft",
    # auth/ — the `sk-` API-key credential POLICY. Not a kernel primitive
    # and not a RustService: a profile binary links it behind a Cargo
    # feature and installs it into transport's `Arc<dyn AuthProvider>`
    # slot, the same shape the coordinator / object-store-provider impls
    # take. `nexusd-cluster` leaves the feature off and keeps `NoAuth`,
    # so the crate never enters that binary.
    "rust/auth",
    # Plugin ABI — stable C ABI contract for dylib plugins.
    "rust/plugin-abi",
    # Deployment binaries.
    "rust/profiles/cluster",
    # `full` = cluster + the S3/R2 object-store driver. Kept separate from
    # `cluster` so the federation binary stays pure (Raft + local/remote) and
    # under its size gate; third-party blob drivers live here instead. Per
    # nexus-vfs#27 kernel-team review.
    "rust/profiles/full",
    # `collaboration` = cluster + `sk-` API-key authentication for external
    # clients. Same separation, same reason: the federation binary terminates
    # no external credential (mTLS is its boundary), so the credential policy
    # is weight it would never use.
    "rust/profiles/collaboration",
]

[workspace.dependencies]
contracts = { path = "rust/contracts" }
nexus-plugin-abi = { path = "rust/plugin-abi" }
# `lib` is the tier-neutral implementation crate per §6 — algorithms
# (bitmap, bloom, glob, hash, rebac, search, simd, trigram) plus the
# `transport_primitives` module (TLS / pool / addressing / TOFU /
# PeerBlobClient trait). Default build is WASM-clean; `python` and
# `transport` features are opt-in.
lib = { path = "rust/lib" }
transport = { path = "rust/transport" }
# services lives in the nexus repo (nexus-owned consumer code).
# Driver impls. `default-features = false` so transitive workspace
# consumers (e.g. `nexus-cluster`) can pick a slim driver set without
# fighting Cargo's feature unification.
backends = { path = "rust/backends", default-features = false }
# `kernel` is rlib-only. `default-features = false` keeps the kernel
# runtime defaults (mimalloc allocator, HTTP connector stack) off in
# transitive consumers (backends / services / transport rlibs);
# deployment binaries opt back in explicitly.
kernel = { path = "rust/kernel", default-features = false }
# raft is an rlib used by the cluster binary and other crates.
raft = { path = "rust/raft", default-features = false, features = ["grpc"] }
# `auth` — the sk- credential policy. Only a profile binary that
# terminates external client auth pulls this in (behind a Cargo
# feature); nexusd-cluster does not.
auth = { path = "rust/auth" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }
regex = "1.10"
memchr = "2.7"
roaring = "0.11"
globset = "0.4"
blake3 = "1.5"
string-interner = "0.20"
regex-syntax = "0.8"
crc32fast = "1.4"
fastcdc = "4.0"
mimalloc = { version = "0.1", default-features = false }
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
tonic-prost = "0.14"

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"

# Cluster binary ships standalone for sudowork; size matters more than
# raw throughput. opt-level="z" picks the cluster code path that
# minimizes object size. On Linux x86_64 with workspace-wide
# strip="symbols", the binary lands around 5-6 MB; on Windows MSVC
# the .exe is closer to 8 MB (PE headers + import tables don't
# compress as much as stripped ELF). CI's size gate (Group F) checks
# the Linux artifact.
[profile.release.package.nexus-cluster]
opt-level = "z"

# `collaboration` reuses `cluster`'s entrypoint verbatim, so it must reuse
# its optimization choice too. Without this override the profile falls back
# to the workspace `opt-level = 3` and the binary is ~1.7 MiB larger than
# `nexusd-cluster` — nearly all of it the opt-level, not the `auth` crate it
# actually adds (that dep delta is hmac + two constant-time helpers).
[profile.release.package.nexus-collaboration]
opt-level = "z"
