[package]
name = "a2a"
version = "0.1.0"
edition = "2021"
description = "A2A messaging substrate — the mailbox `from`-stamp hook (unforgeable sender)"
authors = ["Nexus Team"]
publish = false

[lib]
name = "a2a"
path = "src/lib.rs"

[dependencies]
# The whole footprint of the messaging substrate. The stamp hook is a
# `NativeInterceptHook`; the policy parses the envelope JSON;
# `contracts` supplies `is_system_path`. No raft: the cross-machine
# stream-wakeup is a generic raft primitive armed by the composition
# root, not here (see docs/KERNEL-ARCHITECTURE.md §6.1 + lib.rs docs).
kernel = { workspace = true }
contracts = { workspace = true }
serde_json = { workspace = true }
