[package]
name = "backends"
version = "0.1.0"
edition = "2021"
description = "ObjectStore driver impls — CAS local, path local, blob-pack, S3, GCS. Implements kernel::core::traits::ObjectStore."

[lib]
name = "backends"
crate-type = ["rlib"]

[features]
# Default = every driver compiled in. Slim deployments (`nexusd`) can opt
# out by setting `default-features = false` and naming only what they want.
default = [
    "driver-path-local",
    "driver-cas-local",
    "driver-local-connector",
    "driver-remote",
    "cloud-blob",
]

# Local-host backends (kernel-shipped, no network).
driver-path-local = []
driver-cas-local = []
driver-local-connector = []

# Cross-node RPC proxy — federation primitive.
driver-remote = []

# Cloud blob storage drivers + the HTTP / crypto / streaming dep stack
# they share. (S3 + GCS only — agent-style connectors removed in the
# trim fork.)
cloud-blob = [
    "driver-s3",
    "driver-gcs",
    "dep:reqwest",
    "dep:hmac",
    "dep:sha2",
    "dep:futures-util",
]

# Per-driver fine-grained features (selectable if you want, say, only s3).
driver-s3 = []
driver-gcs = []

# Legacy: kept for backwards-compat with any external caller that still
# enables it. Maps to the new cloud-blob umbrella.
python = ["dep:pyo3"]

[dependencies]
contracts = { workspace = true }
kernel = { workspace = true }
lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
memchr = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
roaring = { workspace = true }
crc32fast = { workspace = true }
encoding_rs = "0.8.35"
rayon = "1.11"
libc = "0.2"
memmap2 = "0.9.9"
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
redb = "4"
uuid = { version = "1", features = ["v4"] }
lru = "0.18"
simdutf8 = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
pyo3 = { version = "0.28.3", features = ["hashbrown"], optional = true }
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false, optional = true }
hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tempfile = "3"
