[package]
name = "backends"
version = "0.1.0"
edition = "2021"
description = "ObjectStore driver impls — connector backends, CAS local, path local, blob-pack local. Implements kernel::core::traits::ObjectStore. Driver-layer crate."

[lib]
name = "backends"
crate-type = ["rlib"]

[features]
# Default = every driver compiled in. Slim deployments (`nexus-cluster`)
# opt out by setting `default-features = false` and naming only the
# drivers they want.
default = [
    "driver-path-local",
    "driver-cas-local",
    "driver-local-connector",
    "driver-remote",
    "connectors",
]

# Local-host backends (kernel-shipped, no network).
driver-path-local = []
driver-cas-local = []
driver-local-connector = []

# Cross-node RPC proxy — federation primitive.  Always available in
# Python deployments, opt-in for slim Rust binaries.
driver-remote = []

# Connector umbrella: every external-API / cloud-blob backend plus the
# shared HTTP / crypto / streaming dependency stack they all need.
connectors = [
    "driver-openai",
    "driver-anthropic",
    "driver-s3",
    "driver-gcs",
    "driver-gdrive",
    "driver-gmail",
    "driver-slack",
    "driver-x",
    "driver-hn",
    "driver-cli",
    "dep:reqwest",
    "dep:hmac",
    "dep:sha2",
    "dep:futures-util",
]

# Per-connector features.  Selectable individually for downstream
# binaries that want, say, only `driver-cli` without the full HTTP stack.
driver-openai = []
driver-anthropic = []
# S3 / S3-compatible (Cloudflare R2, MinIO) speaks HTTP + AWS SigV4, so it
# pulls the HTTP/crypto stack itself. This lets a slim binary enable just
# `driver-s3` (bridge-2 #4262 — `nexus-cluster --features driver-s3`)
# without the whole `connectors` umbrella; the umbrella still re-lists these
# deps, which is a harmless no-op once driver-s3 owns them.
driver-s3 = ["dep:reqwest", "dep:hmac", "dep:sha2"]
driver-gcs = []
driver-gdrive = []
driver-gmail = []
driver-slack = []
driver-x = []
driver-hn = []
driver-cli = []


[dependencies]
contracts = { workspace = true }
kernel = { workspace = true }
lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
memchr = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
roaring = { workspace = true }
crc32fast = { workspace = true }
encoding_rs = "0.8.35"
rayon = "1.11"
libc = "0.2"
memmap2 = "0.9.9"
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
redb = "4"
uuid = { version = "1", features = ["v4"] }
lru = "0.18"
simdutf8 = "0.1"
tonic = { workspace = true }
prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros"] }
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
# Connector / cloud HTTP stack — feature-gated so non-connector builds
# stay slim.
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false, optional = true }
hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tempfile = "3"
