[package]
name = "kernel"
version = "0.10.1"
edition = "2021"

[lib]
name = "kernel"
crate-type = ["rlib"]

[dependencies]
contracts = { workspace = true }
nexus-plugin-abi = { workspace = true }
lib = { workspace = true, features = ["transport"] }
libloading = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
memchr = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
string-interner = { workspace = true }
roaring = { workspace = true }
rayon = "1.11"
bloomfilter = "3.0"
libc = "0.2"
memmap2 = "0.9.9"
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
# ArcSwapOption backs the kernel's `PermissionProvider` slot — atomic
# swap so `set_permission_provider` at boot never races the hot-path
# `check_permission` load.  Fast path (no provider) is one atomic load
# + branch (~2ns); zero runtime cost when the slot stays `None`.
arc-swap = "1"
smallvec = "1.15"
redb = "4"
uuid = { version = "1", features = ["v4"] }
lru = "0.18"
crc32fast = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros", "process", "io-util"] }
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
# Ed25519 signature verification for dlopen'd plugins (PluginLoader::load
# rejects an unsigned or wrong-signed plugin). Trusted public keys live
# in `trusted_keys/*.pub` and are embedded at compile time.
ed25519-dalek = "2"
bytes = "1"
mimalloc = { workspace = true, optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[build-dependencies]
tonic-prost-build = "0.14"
# Vendored protoc binary so kernel build works on any host without a
# system-wide protobuf-compiler install. Tier-1 platforms (linux/macos/windows
# × x86_64/aarch64) all covered by the pre-compiled binary the crate ships.
protoc-bin-vendored = "3"

[dev-dependencies]
criterion = "0.8"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }  # Self-signed CAs for federation_client tests
tempfile = "3"
libc = "0.2"


[[bench]]
name = "read_batch"
harness = false

[[bench]]
name = "syscall_bench"
harness = false

[[bench]]
name = "readdir_bench"
harness = false
