[package]
name = "lib"
version = "0.1.0"
edition = "2021"
description = "Shared Rust utilities — bloom, hash, search, trigram, ReBAC, path/prefix/simd/io/glob (WASM/edge compatible by default). Linux libc analogue per KERNEL-ARCHITECTURE.md §6."

[lib]
name = "lib"
crate-type = ["rlib"]

[features]
# Brings `lib::transport_primitives` (TLS, pool, addressing, TOFU trust
# store, PeerBlobClient trait). Enabled by every peer crate that speaks
# raft or VFS gRPC. WASM / pure-algo callers skip it.
transport = [
    "dep:tonic",
    "dep:tokio",
    "dep:dashmap",
    "dep:parking_lot",
    "dep:thiserror",
    "dep:tracing",
    "dep:sha2",
    "dep:pem",
    "dep:base64",
    "dep:time",
]

[dependencies]
# Constants SSOT — pulled unconditionally because the crate is
# zero-dep-cost (only `pub const` definitions). transport_primitives
# uses it for the gRPC server-hardening defaults; other modules may
# reach for it as the constants set grows.
contracts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
memchr = { workspace = true }
roaring = { workspace = true }  # used by lib::bitmap pure-Rust helpers
globset = { workspace = true }
blake3 = { workspace = true }
string-interner = { workspace = true }
regex-syntax = { workspace = true }
crc32fast = { workspace = true }

# Transport-primitives module deps (gated by the `transport` feature).
tonic = { workspace = true, optional = true }
tokio = { version = "1", features = ["rt", "net", "sync", "time"], optional = true }
dashmap = { version = "6.1", optional = true }
parking_lot = { version = "0.12", optional = true }
thiserror = { version = "2", optional = true }
tracing = { version = "0.1", optional = true }
sha2 = { version = "0.11", optional = true }
pem = { version = "3", optional = true }
base64 = { version = "0.22", optional = true }
time = { version = "0.3", features = ["parsing", "formatting"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
proptest = "1.5"
tempfile = "3"
# transport_primitives unit tests need self-signed cert generation +
# tempdirs. Only compiled when running tests with `--features transport`.
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
