[package]
name = "nexus-vfs-cluster"
version = "0.1.0"
edition = "2021"
description = "Nexus VFS — Raft consensus + VFS gRPC transport (cluster networking layer)"
license = "Apache-2.0"
repository = "https://github.com/nexi-lab/nexus-vfs"
homepage = "https://github.com/nexi-lab/nexus-vfs"
readme = "../../README.md"
keywords = ["vfs", "raft", "grpc", "consensus", "cluster"]
categories = ["filesystem", "network-programming"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(has_protos)"] }

[lib]
name = "nexus_vfs_cluster"
crate-type = ["rlib"]

[features]
default = ["full"]
mimalloc = ["dep:mimalloc"]
async = ["dep:tokio"]
python = ["dep:pyo3"]
consensus = ["dep:raft", "dep:protobuf", "dep:slog", "async"]
grpc = [
    "dep:tonic", "dep:prost", "dep:tonic-prost",
    "dep:bytes", "dep:tonic-prost-build",
    "async", "dep:tracing-subscriber",
    "consensus",
    "dep:dashmap", "dep:time", "dep:sha2", "dep:rcgen",
    "dep:pem", "dep:base64", "dep:gethostname", "dep:rand",
]
full = ["grpc", "consensus"]

[dependencies]
nexus-vfs-core = { workspace = true, default-features = false }

# Embedded KV (raft log + state machine).
redb = "4"
tempfile = "3"

# Raft consensus (tikv/raft-rs).
raft = { version = "0.7", default-features = false, features = ["protobuf-codec"], optional = true }
protobuf = { version = "2.28", optional = true }
slog = { version = "2.8", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "macros", "signal", "io-util"], optional = true }

# Workspace gRPC (also used by transport sub-module).
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }

bytes = { version = "1", optional = true }
dashmap = { version = "6", optional = true }
time = { version = "0.3", features = ["parsing", "formatting", "macros"], optional = true }
sha2 = { version = "0.11", optional = true }
rcgen = { version = "0.14", features = ["pem", "x509-parser"], optional = true }
pem = { version = "3", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.10", optional = true }
gethostname = { version = "1.1", optional = true }

# Transport sub-module unconditional deps.
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

pyo3 = { version = "0.28.3", optional = true }
mimalloc = { workspace = true, optional = true }

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = "3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
