[package]
name = "nexus-vfs-core"
version = "0.1.0"
edition = "2021"
description = "Nexus VFS — core library (contracts, kernel, backends, services merged)"
license = "Apache-2.0"
repository = "https://github.com/nexi-lab/nexus-vfs"
homepage = "https://github.com/nexi-lab/nexus-vfs"
readme = "../../README.md"
keywords = ["vfs", "filesystem", "storage", "cas"]
categories = ["filesystem", "data-structures"]

[lib]
name = "nexus_vfs_core"
crate-type = ["rlib"]

# Allow build.rs to set has_protos cfg (kernel proto codegen).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(has_protos)",
    "cfg(feature, values(\"driver-openai\",\"driver-anthropic\",\"driver-gdrive\",\"driver-gmail\",\"driver-slack\",\"driver-x\",\"driver-hn\",\"driver-cli\",\"py-hook-adapters\",\"connectors\"))",
] }

[features]
default = ["mimalloc"]

mimalloc = ["dep:mimalloc"]

# Cloud blob storage drivers (S3, GCS) and the HTTP stack they share.
# sha2 is unconditional (transport_primitives needs it), so it isn't
# gated here.
cloud-blob = [
    "driver-s3",
    "driver-gcs",
    "dep:reqwest",
    "dep:hmac",
    "dep:futures-util",
]

# Per-driver flags — preserved from upstream feature gating in the source.
driver-path-local = []
driver-cas-local = []
driver-local-connector = []
driver-remote = []
driver-s3 = []
driver-gcs = []

# Service-tier feature gates (preserved from upstream services/lib.rs).
service-audit = []
service-agents = []
service-managed-agent = []
service-acp = []
service-tasks = []
service-permission = []
service-matrix-adapter = ["dep:axum", "dep:base32", "dep:tower"]

# PyO3 wheel binding surface (opt-in; the trim fork has no cdylib).
python = [
    "dep:pyo3",
    "service-audit",
    "service-agents",
    "service-managed-agent",
    "service-acp",
    "service-tasks",
    "service-permission",
]

# lib::transport_primitives — TLS / pool / TOFU / PeerBlobClient trait.
# Always on; folded into the default build.
transport-primitives = []

[dependencies]
# Cross-tier dep stack — union of the 5 merged crates.
serde = { workspace = true }
serde_json = { workspace = true }
ahash = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }
memchr = { workspace = true }
roaring = { workspace = true }
globset = { workspace = true }
blake3 = { workspace = true }
fastcdc = { workspace = true }
string-interner = { workspace = true }
crc32fast = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }

encoding_rs = "0.8.35"
rayon = "1.11"
bloomfilter = "3.0"
libc = "0.2"
memmap2 = "0.9.9"
tempfile = "3"
dashmap = "6.1"
parking_lot = "0.12"
hashlink = "0.9"
redb = "4"
uuid = { version = "1", features = ["v4"] }
lru = "0.18"
simdutf8 = "0.1"
simsimd = "6"
fjall = "3"
bincode = "1.3"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "sync", "time", "macros", "process", "io-util"] }
futures = "0.3"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
base64 = "0.22"
bytes = "1"

# Optional deps — feature-gated.
mimalloc = { workspace = true, optional = true }
pyo3 = { version = "0.28.3", features = ["hashbrown"], optional = true }
reqwest = { version = "0.13", features = ["json", "stream", "rustls"], default-features = false, optional = true }
hmac = { version = "0.13", optional = true }
sha2 = "0.11"
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }
axum = { version = "0.8", optional = true }
base32 = { version = "0.5", optional = true }
tower = { version = "0.5", optional = true }

# lib::transport_primitives deps (TLS / pool / TOFU)
pem = "3"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
tempfile = "3"
